feat: добавление проекта Профибонус
