# server/api/projects/[id]/blocks.post.ts
@@ -4,7 +4,7 @@ export default defineEventHandler(async (event) => {
   try {
     const projectId = event.context.params?.id;
     const body = await readBody(event);
-    const { type, review, reviewer_photo, reviewer_name, reviewer_job_title, title, description, content, images, ordinary_title, ordinary_content, images_mosaic, order } = body;
+    const { type, review, reviewer_photo, reviewer_name, reviewer_job_title, title, description, dedicatedDescription, content, media, media_position, order } = body;
 
     const { rows: maxOrderRows } = await query(
       `SELECT COALESCE(MAX("order"), 0) AS max_order FROM blocks WHERE project_id = $1`,
@@ -13,9 +13,9 @@ export default defineEventHandler(async (event) => {
     const maxOrder = maxOrderRows[0]?.max_order || 0;
 
     const { rows } = await query(
-      `INSERT INTO blocks (project_id, type, review, reviewer_photo, reviewer_name, reviewer_job_title, title, description, content, images, ordinary_title, ordinary_content, images_mosaic, "order")
-       VALUES ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11, $12, $13, $14) RETURNING *`,
-      [projectId, type, review, reviewer_photo, reviewer_name, reviewer_job_title, title, description, JSON.stringify(content), JSON.stringify(images), ordinary_title, JSON.stringify(ordinary_content), images_mosaic, maxOrder + 1]
+      `INSERT INTO blocks (project_id, type, review, reviewer_photo, reviewer_name, reviewer_job_title, title, description, dedicated_description,  content, media, media_position, "order")
+       VALUES ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11, $12, $13) RETURNING *`,
+      [projectId, type, review, reviewer_photo, reviewer_name, reviewer_job_title, title, description, dedicatedDescription, JSON.stringify(content), JSON.stringify(media), media_position, maxOrder + 1]
     );
 
     return getSuccessResponse(rows[0]);
